...
  "changeUsername": "Change username",
  "changeNickname": "Change nickname",
  "nicknameChanged": "Nickname changed successfully",
  "newUsername": "New username",
  "newNickname": "New nickname",
  "nicknameInfo": "Nickname is publicly visible to other users",
  "nickname": "Nickname",
  "group": "Group",
  "notMemberOfAnyGroup": "You aren't a member of any group",
  "waitingForApproval": "Waiting for approval",
  "removedFromGroup": "You have been removed from the group",
  "leaveOldGroup": "First leave the old group",
  "cantLeaveYourGroup": "You can't leave the group you created, you have to delete it",
  "cantChangeGroupName": "You can't change this group's name",
  "subjectIsntShared": "The selected subject isn't shared",
  "password": "Password",
  "repeatPassword": "Repeat password",
  "notSamePassword": "The repeated password isn't the same.",
  "oldPassword": "Old password",
  "email": "Email",
  "rememberMe": "Remember me",
  "rememberMeTitle": "Remember me?",
  "rememberMeWarning": "If you continue, you won't be able to view your actual timetable and current homework.",
  "continueAction": "Continue",
  "logOut": "Log out",
  "importTimetableTitle": "Import timetable and subjects?",
...
  "noHomework": "No homework found",
  "noExams": "No exams found",
  "noRecentlyDeleted": "No recently deleted items found",
  "timetable": "Timetable",
  "convertToHomework": "Convert to homework",
  "convertToExam": "Convert to exam",
  "cloudSync": "Cloud sync",
  "cloudSyncSettingsSubtitle": "Cross device synchronization & backup",
  "useCloudSync": "Use cloud sync",
  "register": "Register",
  "registering": "Registering",
  "loggingIn": "Logging in",
  "youWereLoggedOut": "Logged out",
  "loggedInSynced": "Logged in, everything has been synced",
  "errorLoggingIn": "There was an issue during the login.",
  "errorRegistering": "There was an issue registering you.",
...
  "importErrorMessage": "An error occurred during import.",
  "initialPageTitle": "Initial page",
  "initialPageSubtitle": "The page that will be displayed when opening the app",
  "alreadyDeveloper": "You are already the developer",
  "pressMoreTimesToBecomeDeveloper": "Press 2 more times to become the developer",
  "becameDeveloper": "You are now the developer",
  "settings": "Settings",
  "colorTheme": "Color theme",
  "colorThemeDescription": "Customize the colors of the app",
  "styleMotionDescription": "Customize animations and more",
  "shortcutsDescription": "View keyboard shortcuts",
  "stravaCz": "Strava.cz",
  "useStravaCz": "Use Strava.cz",
...
  "pleaseUpdateApp": "Please update the app.",
  "sendPasswordReset": "Send password reset",
  "sent": "Sent",
  "verifyEmailAddress": "Verify email address",
  "emailVerificationOpenLinkInEmail": "Please open the link in the email sent to {email} and then tap done here. If you didn't receive any email, check your spam folder and try again.",
  "sendAgain": "Send again",
  "done": "Done",
  "addressVerified": "Address verified",
  "changeEmail": "Change email",
  "changeEmailAddress": "Change email address",
  "newEmailAddress": "New email address",
  "emailAddressChanged": "Email address changed",
  "changeEmailDontForgetClickLink": "Dont forget to click the link in the email sent to {email} to be able to login with this address.",
  "forgotPassword": "Forgot password",
  "emailNotVerified": "Email not verified",
  "tapToVerify": "Tap to verify",
  "secondShort": " sec",
  "minutesShort": " min",
  "hoursShort": "h",
  "daysShort": "d",
  "share": "Share",
...
